# ipld

./: .gitignore  .secrets.baseline  README.md  app.py  build.yml  d_iplinfo.rexx  data_migration.sh  database_migrate.py  deploy-test.sh  deploy.sh  dry_run.py  ipld_calc.awk  ipld_parsing.awk  main.sh  methods.sh  patterns  pyproject.toml  remote_async_ssh.py  spark_handler.py  spark_ingest.py  sqlalchemy_sqlite.py  zplatipld_ingest.py  zplatipld_task_scheduler.py
app/: main.py
app/api/: auth.py  lpar_management.py  report_viewer.py  task_management.py
app/application/: dtos.py
app/application/services/: auth_service.py  lpar_service.py  report_service.py  task_service.py
app/application/use_cases/: deploy_lpar_task.py  (+2 more)
app/domain/: entities.py  repositories.py  services.py
deploy/pre-production/: application.yaml  route.yaml
deploy/production/: application.yaml  route.yaml
deploy/test/: application.yaml  route.yaml
static/: self_scripts.js
static/css/: datatables.min.css
static/js/: datatables.min.js  pdfmake.min.js  vfs_fonts.js
templates/: import_scripts.html  import_styles.html  index.html  layout.html  login.html  lpar_results.html  lpar_results_table.html  lpar_results_table_fail.html  lpar_results_table_last_ipl.html  lpar_settings.html  lpar_settings_detail.html  lpar_settings_new.html  lpar_settings_new_step2.html  lpar_tasks.html  lpar_tasks_run.html  notification_messages.html  people_access_approve.html  scheduler_data_ingest.html  scheduler_list.html  signup.html  system_database_import.html  test.html  top_menu.html  vault_ssh.html
(+7 files in other folders)
